--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -117,5 +117,6 @@ services:
     pelagos.util.url_validation:
         class: Pelagos\Util\UrlValidation
 
-    pelagos.security.encoder:
-        class: Pelagos\Bundle\AppBundle\Security\PelagosEncoder
+    pelagos.security.login_form_authenticator:
+        class: Pelagos\Bundle\AppBundle\Security\LoginFormAuthenticator
+        autowire: true
