--- a/composer.json
+++ b/composer.json
@@ -43,15 +43,13 @@
         "php-amqplib/rabbitmq-bundle": "^1.9",
         "jsor/doctrine-postgis": "^1.1",
         "opensoft/doctrine-postgres-types": "^1.2",
-        "hwi/oauth-bundle": "^0.6",
         "phobetor/rabbitmq-supervisor-bundle": "^1.5",
         "friendsofsymfony/elastica-bundle": "^5.0",
         "phayes/geophp": "^1.2",
         "doctrine/doctrine-migrations-bundle": "^1.2",
         "egulias/email-validator": "^1.2",
         "symfony/webpack-encore-bundle": "^1.1",
-        "php-http/httplug-bundle": "^1.10",
-        "php-http/guzzle6-adapter": "^1.1"
+        "php-http/httplug-bundle": "^1.10"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
