Added controller, twig and css for basic search page

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
@@ -84,3 +84,6 @@ pelagos_side_by_side_ui:
 
 pelagos_remotelyhosted_datasets_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\RemotelyHostedDatasetsController
+
+pelagos_search_page_ui:
+    resource: Pelagos\Bundle\AppBundle\Controller\UI\SearchPageController
