Added funding org name into the query and included it in the config file

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -264,6 +264,7 @@ fos_elastica:
                                             type: 'nested'
                                             properties:
                                                 id: ~
+                                                name: ~
                         datasetSubmission:
                             type: 'nested'
                             properties:
