--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -94,6 +94,7 @@ services:
             - { name: monolog.processor, channel: retriever }
             - { name: monolog.processor, channel: dataset_file_hasher }
             - { name: monolog.processor, channel: doi_issue }
+            - { name: monolog.processor, channel: login_attempts }
 
     pelagos.console.listener:
         class: Pelagos\Event\ConsoleListener
@@ -121,3 +122,5 @@ services:
     pelagos.security.login_form_authenticator:
         class: Pelagos\Bundle\AppBundle\Security\LoginFormAuthenticator
         autowire: true
+        tags:
+            - { name: monolog.logger, channel: login_attempts }
