Added aggregation for research group

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -320,7 +320,8 @@ fos_elastica:
                                 researchGroup:
                                     type: 'nested'
                                     properties:
-                                        id: ~
+                                        id:
+                                            type: 'keyword'
                                         name: ~
                                         fundingCycle:
                                             type: 'nested'
