Added report from datacite

--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
         "doctrine/doctrine-migrations-bundle": "^1.2",
         "egulias/email-validator": "^1.2",
         "php-http/httplug-bundle": "^1.10",
-        "php-http/guzzle6-adapter": "^1.1"
+        "php-http/guzzle6-adapter": "^1.1",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
