--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "@symfony/webpack-encore": "^0.23.0",
     "copy-webpack-plugin": "^4.6.0"
   },
