--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -120,4 +120,4 @@ services:
 
     pelagos.util.search:
         class: Pelagos\Util\Search
-        arguments: ["@fos_elastica.finder.search_pelagos.dataset"]
+        arguments: ["@fos_elastica.finder.search_pelagos.dataset", "@doctrine.orm.entity_manager"]
