--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -8,6 +8,9 @@ parameters:
     # A unique name for this Pelagos instance
     pelagos_name: ~
 
+    # A unique name for this Search tool index
+    search_tool_index: ~
+
     database_host:     127.0.0.1
     database_port:     5432
     database_name:     postgres
