--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,7 +40,8 @@ framework:
         storage_id: session.storage.native
     fragments:       ~
     http_method_override: true
-    assets: ~
+    assets:
+        json_manifest_path: '%kernel.project_dir%/web/build/manifest.json'
 
 # Twig Configuration
 twig:
