Added abstract to index and query, and added boost

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -314,6 +314,7 @@ fos_elastica:
                         dataset:
                             properties:
                                 title: ~
+                                abstract: ~
                                 researchGroup:
                                     type: 'nested'
                                     properties:
