--- a/.travis.yml
+++ b/.travis.yml
@@ -66,8 +66,7 @@ script:
   - phpunit
   - git clone --depth=1 https://github.com/squizlabs/PHP_CodeSniffer.git
   - ./PHP_CodeSniffer/bin/phpcs --version
-  - ./PHP_CodeSniffer/bin/phpcs --config-set default_standard GRIIDC 
-  - ./PHP_CodeSniffer/bin/phpcs --colors --ignore=bak --extensions=php -i -n -s ./src/
+  - ./PHP_CodeSniffer/bin/phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php -n -s ./src
   
 notifications:
   email: false
