Some more parameter changes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ script:
   - phpunit
   - git clone --depth=1 https://github.com/squizlabs/PHP_CodeSniffer.git
   - ./PHP_CodeSniffer/bin/phpcs --version
-  - ./PHP_CodeSniffer/bin/phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php -n -s ./src
+  - ./PHP_CodeSniffer/bin/phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php --severity=3 ./src
   
 notifications:
   email: false
