--- a/.travis.yml
+++ b/.travis.yml
@@ -69,8 +69,7 @@ script:
   - git clone --depth=1 https://github.com/squizlabs/PHP_CodeSniffer.git
   - ./PHP_CodeSniffer/bin/phpcs --version
   - ./PHP_CodeSniffer/bin/phpcs --config-set installed_paths ./GRIIDC/
-  - ./PHP_CodeSniffer/bin/phpcs --config-show
-  - ./PHP_CodeSniffer/bin/phpcs --standard=GRIIDC --extensions=php ./src
+  - ./PHP_CodeSniffer/bin/phpcs --standard=GRIIDC --extensions=php -i ./src
   
 notifications:
   email: false
