--- a/.travis.yml
+++ b/.travis.yml
@@ -66,9 +66,8 @@ before-script:
 # Run script
 script:
   - phpunit
-  - composer require "squizlabs/php_codesniffer=2.7.*"
   - vendor/bin/phpcs --version
-  - vendor/bin/phpcs --color --standard=GRIIDC --ignore=bak --extensions=php -s -n ./src
+  - vendor/bin/phpcs --colors --standard=GRIIDC --ignore=bak --extensions=php -s -n ./src
   
 notifications:
   email: false
