--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ before-install:
   - cp app/config/parameters.yml.dist app/config/parameters.yml
   - psql -c 'create database postgres' -U postgres
   - psql -c 'create extension postgis' -U postgres -d postgres
-  
+  - composer require "squizlabs/php_codesniffer=2.7.*"
   
 
 # Install composer dependencies,
