Will this blend?

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ before-script:
   
 # Run script
 script:
-  - phpunit
+  - ./vendor/bin/simple-phpunit
   - git clone --depth=1 https://github.com/squizlabs/PHP_CodeSniffer.git
   - ./PHP_CodeSniffer/bin/phpcs --version
   - ./PHP_CodeSniffer/bin/phpcs --config-set installed_paths ./src/GRIIDC/ --colors --ignore=bak --extensions=php -i -n -s ./src/
