--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -42,7 +42,7 @@ framework:
     http_method_override: true
     assets:
         json_manifest_path: '%kernel.project_dir%/web/build/manifest.json'
-    test: true
+    test: ~
 
 # Twig Configuration
 twig:
