Removed extra file for doi rest api

--- a/src/Pelagos/Util/DOIutil.ini.example
+++ b/src/Pelagos/Util/DOIutil.ini.example
@@ -2,3 +2,4 @@ doi_api_user_name = "username"
 doi_api_password = "password"
 doi_api_shoulder = "doi:10.1234/ABC"
 url = "https://doi.website.here"
+url_rest = "https://restapi.here"
